updated flask dockerfile and added README
* configured user (non-root)
* application now pulled from github directly in the container

--- a/dockerfiles/docker-compose.yml
+++ b/dockerfiles/docker-compose.yml
@@ -81,7 +81,7 @@ services:
       - esnet
   flask:
     build:
-      context: ../scripts/
+      context: .
       dockerfile: flask.dockerfile
     container_name: flask
     ports:
